[package]
name = "pop-upgrade-gtk"
version = "1.0.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[dependencies]
apt-cmd = "0.2.1"
better-panic = "0.2.0"
cascade = "1.0.0"
chrono = "0.4.19"
clap = "2.34.0"
derive_more = "0.99.17"
derive-new = "0.5.9"
enclose = "1.1.8"
fern = "0.6.0"
flume = "0.10.9"
fomat-macros = "0.3.1"
gio = "0.14.8"
glib = "0.14.8"
gtk = { version = "0.14.3", features = [ "v3_22" ] }
i18n-embed = { version = "0.13.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.1"
log = "0.4.14"
notify-rust = { version = "4.5.5", default-features = false, features = ["dbus"] }
num-traits = "0.2.14"
once_cell = "1.9.0"
os-release = "0.1.0"
pango = "0.14.8"
pop-system-updater-gtk = { git = "https://github.com/pop-os/system-updater" }
pop-upgrade = { path = "../" }
rust-embed = { version = "6.3.0", features = ["debug-embed"] }
shrinkwraprs = "0.3.0"
thiserror = "1.0.30"
ubuntu-version = "0.2.4"
upower_dbus = "0.1.0"
users = "0.11.0"
yansi = "0.5.0"